--- a/_manifest.json
+++ b/_manifest.json
@@ -16,44 +16,44 @@
 "generated" : "true",
   "icons": [
     {
-      "src": "app/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "app/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "app/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "app/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "app/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "app/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "app/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "app/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+      "src": "images/icon_pwa/72x72.png",
+      "type": "image/png",
+      "sizes": "72x72"
+  },
+  {
+      "src": "images/icon_pwa/96x96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+  },
+  {
+      "src": "images/icon_pwa/128x128.png",
+      "type": "image/png",
+      "sizes": "128x128"
+  },
+  {
+      "src": "images/icon_pwa/144x144.png",
+      "type": "image/png",
+      "sizes": "144x144"
+  },
+  {
+      "src": "images/icon_pwa/152x152.png",
+      "type": "image/png",
+      "sizes": "152x152"
+  },
+  {
+      "src": "images/icon_pwa/192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+  },
+  {
+      "src": "images/icon_pwa/384x384.png",
+      "type": "image/png",
+      "sizes": "384x384"
+  },
+  {
+      "src": "images/icon_pwa/512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+  }
   ]
 }
