--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,11 @@
 "comment": "---data-pwa-version can be found in index.html in the manifest tag",
 "comment": "---if versions are not the same it will cause an update loop",
 "lang" : "en",
-"name" : "Azures",
+"name" : "Beneficios",
 "scope" : "/",
 "display" : "fullscreen",
 "start_url" : "login.html",
-"short_name" : "Azures",
+"short_name" : "BEN",
 "description" : "",
 "orientation" : "portrait",
 "background_color": "#000000",
