--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,10 @@
 {
 "version": "1.0",
-"comment": "---Above version must be the same as data-pwa-version",
-"comment": "---data-pwa-version can be found in index.html in the manifest tag",
-"comment": "---if versions are not the same it will cause an update loop",
-"lang" : "en",
 "name" : "Beneficios",
-// "scope" : "/",
 "display" : "fullscreen",
 "start_url" : "login.html",
 "short_name" : "BEN",
-"description" : "",
+"description" : "Beneficios",
 "orientation" : "portrait",
 "background_color": "#000000",
 "theme_color": "#000000",
