--- a/_manifest.json
+++ b/_manifest.json
@@ -1,13 +1,10 @@
 {
 "version": "1.0",
-"comment": "---Above version must be the same as data-pwa-version",
-"comment": "---data-pwa-version can be found in index.html in the manifest tag",
-"comment": "---if versions are not the same it will cause an update loop",
-"lang" : "en",
+"lang" : "es",
 "name" : "Beneficios",
-"scope" : "/",
+"scope" : "/Pwa_Benefcios/",
 "display" : "fullscreen",
-"start_url" : "index.html",
+"start_url" : "login.html",
 "short_name" : "BN",
 "description" : "Marea Beneficios",
 "orientation" : "portrait",
