--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "short_name": "BN",
     "name": "Marea Beneficios",
-    "start_url": "/Pwa_Benefcios/manifest.js",
+    "start_url": "/Pwa_Benefcios/login.html",
     "background_color": "#A50034",
     "theme_color": "#A50034",
     "display": "standalone",
